--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -13,9 +13,10 @@ jobs:
         java-version: '21'
         distribution: 'zulu'
         cache: maven
-    - name: Run Sonar Analysis with cloud
-      run:  mvn -B verify sonar:sonar -Dsonar.projectKey=dotnetgithubactionsproject -Dsonar.organization=dotnetgithubactionsorg -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
+    - name: Sonar Analysis 
+      uses:  sonarsource/sonarqube-scan-action@master
       env:
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   security:
