--- a/.github/workflows/complete-workflow.yml
+++ b/.github/workflows/complete-workflow.yml
@@ -33,8 +33,8 @@ jobs:
 
   security:
     runs-on: ubuntu-latest
-    #needs: build
-    #name: Run the SCA scan on the source code
+    needs: build
+    name: Run the SCA scan on the source code
     steps:
       - uses: actions/checkout@master
       - name: RunSnyk to check for vulnerabilities
